# ros2_node_development

./: .gitignore  Deep ROS 2 Development Insights (1).md  Microtractor_Software_Architecture.md  Nav2_ For systems integrators .md  README.md  ROS 2 Client Library Deep Dive.md  ROS 2 TDD_ A Comprehensive Guide.md  ROS2 executor safety modelling.md  onAI_PRODUCTIVITY_and_AI_SLOP.md  onREADMEs.md  onROSSYSTEMS.md
adrs/: 0001-language-choice-strategy.md  0002-real-time-architecture.md
deployment/: multi_robot_strategies.md
docs/language_choice/: README.md
docs/language_choice/cpp/: advanced_patterns.md
docs/language_choice/python/: best_practices.md
docs/real_world_applications/robotics_arm_control/: README.md
examples/basic_pub_sub/: CMakeLists.txt  package.xml
examples/basic_pub_sub/config/: params.yaml
examples/basic_pub_sub/include/basic_pub_sub/: publisher_core.hpp  sensor_fusion_core.hpp  subscriber_core.hpp
examples/basic_pub_sub/launch/: talker_listener.launch.py
examples/basic_pub_sub/src/: listener.cpp  publisher_core.cpp  sensor_fusion_core.cpp  sensor_fusion_node.cpp  subscriber_core.cpp  talker.cpp
examples/gnss_navigation_stack/: .gitignore  README.md
examples/gnss_navigation_stack/gnss_navigation/: CMakeLists.txt  package.xml
examples/gnss_navigation_stack/gnss_navigation/cmake/: gnss_navigation-config.cmake.in
examples/gnss_navigation_stack/gnss_navigation/include/gnss_navigation/: imu_gnss_tracker.h  lie.h  pose2d.h  types.h  utm.h
examples/gnss_navigation_stack/gnss_navigation/src/: imu_gnss_tracker.cpp  pose2d.cpp
examples/gnss_navigation_stack/gnss_navigation_ros/: CMakeLists.txt  package.xml
examples/gnss_navigation_stack/gnss_navigation_ros/include/gnss_navigation_ros/: imu_gnss_tracker_ros.h
examples/gnss_navigation_stack/gnss_navigation_ros/launch/: demo_simulation.launch.py  imu_gnss_tracker.launch.py
examples/gnss_navigation_stack/gnss_navigation_ros/param/: imu_gnss_tracker.yaml
examples/gnss_navigation_stack/gnss_navigation_ros/scripts/: gnss_spoofer.py
examples/gnss_navigation_stack/gnss_navigation_ros/src/: imu_gnss_tracker_ros.cpp
examples/lifecycle_node/: CMakeLists.txt  package.xml
examples/lifecycle_node/launch/: lifecycle.launch.py
examples/lifecycle_node/src/: lifecycle_talker.cpp
examples/parameters/: CMakeLists.txt  package.xml
examples/parameters/config/: params.yaml
examples/parameters/src/: parameter_node.cpp
on_languages/: 0002-real-time-architecture.md  README.md
